Fix DevGrid not covering entire page

--- a/src/styles/DevGrid.module.scss
+++ b/src/styles/DevGrid.module.scss
@@ -9,7 +9,7 @@
   flex-wrap: wrap;
   align-content: flex-start;
 
-  overflow-y: hidden;
+  z-index: 9999;
 
   top: 0;
   left: 0;
