--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,7 +23,6 @@ body {
 html,
 body {
   min-height: 100dvh;
-  height: 100%;
 }
 
 #root {
